# PythonProject

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
pythonproject/: __init__.py
tests/: conftest.py  test_sample.py
