[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["xNinjaKittyx <xNinjaKittyx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pdoc3 = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-timeout = "^1.4.2"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-sv -ra --cov pythonproject/ --html=report.html --self-contained-html"